InFlix/force-app/main/default/objects/Season__c/fields/Length_min__c.field-meta.xml
<CustomField>
    <fullName>Length_min__c</fullName>
    <label>Length(min)</label>
    <summarizedField>Episode__c.Length_min__c</summarizedField>
    <summaryForeignKey>Episode__c.Season__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>