InFlix/force-app/main/default/objects/Season__c/validationRules/Season_name_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Season_name_rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Name , TV_Series__r.Name + &quot; S[0-9]{2}&quot;))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The season name must start with the TV series name followed by a space and &apos;S&apos; followed by two digits indicating the season number (e.g., &apos;SeriesName S01&apos;).</errorMessage>
</ValidationRule>